# pecos

./: .gitignore  CMakeLists.txt  COPYRIGHT  INSTALL  Makefile.am  README  SConstruct  configure.ac
python/: CMakeLists.txt  OptionsList.i  README  Teuchos_SerialDenseVector.i  math_tools.i  python_helpers.cpp  python_helpers.hpp  regression.i  setup.py  setup.py.cmake.in  test_options_list.cpp  univariate_polynomials.i
python/PyDakota/unit/: test_compressed_sensing.py  test_swig_example.py
python/cpp_src/: OptionsList.i  Teuchos_SerialDenseMatrix.i  Teuchos_SerialDenseVector.i  approximations.i  data_structures.i  fundamentals.i  math_tools.i  numpy_include.hpp  python_helpers.cpp  python_helpers.hpp  regression.i  typedefs_for_python_wrapper.hpp  univariate_polynomials.i
python/cpp_src/swig_examples_src/: dot.cpp  dot.i  enum_example.hpp  enum_example.i  options_list_interface.cpp  options_list_interface.hpp  options_list_interface.i  std_vector_example.hpp  std_vector_example.i  std_vector_example_type_defs.hpp
python/python_src/PyDakota/: plot_3d.py  visualization.py
python/python_src/PyDakota/models/: genz.py
python/python_src/PyDakota/swig_examples/: test_dot.py  test_enum_example.py  test_options_list_interface.py  test_std_vector.py
python/python_src/PyDakota/unit/: CMakeLists.txt  test_compressed_sensing.py  test_cross_validation.py  test_math_tools.py  test_monomial.py  test_options_list.py  test_univariate_polynomials.py  test_variable_transformation.py
python/src/PyDakota/unit/: test_monomial.py  test_options_list.py  test_univariate_polynomials.py
python/tutorials/: CMakeLists.txt  Estimating surrogate parameters using cross validation.ipynb  Multivariate Function Approximation With Dakota.ipynb  Polynomial Cross Validation.ipynb  test_notebooks.py
src/: ActiveKey.hpp  BasisApproximation.cpp  BasisApproximation.hpp  BasisFunction.cpp  BasisFunction.hpp  BasisPolynomial.cpp  BasisPolynomial.hpp  BetaRandomVariable.hpp  BinomialRandomVariable.hpp  BoostRNG_Monostate.hpp  BoundedLognormalRandomVariable.hpp  BoundedNormalRandomVariable.hpp  CMakeLists.txt  CharlierOrthogPolynomial.cpp  CharlierOrthogPolynomial.hpp  ChebyshevOrthogPolynomial.cpp  ChebyshevOrthogPolynomial.hpp  CombinedSparseGridDriver.cpp  CombinedSparseGridDriver.hpp  CompressedSensing.cpp  CompressedSensing.hpp  CrossValidation.cpp  CrossValidation.hpp  CrossValidationIterator.cpp  CrossValidationIterator.hpp  CrossValidationModules.cpp  CrossValidationModules.hpp  CubatureDriver.cpp  CubatureDriver.hpp  DataTransformation.cpp  DataTransformation.hpp  DensityEstimator.cpp  DensityEstimator.hpp  DiscrepancyCalculator.cpp  DiscrepancyCalculator.hpp  DiscreteSetRandomVariable.hpp  DistributionParams.hpp  ExponentialRandomVariable.hpp  FaultTolerance.cpp  FaultTolerance.hpp  (+167 more)
surrogates/inactive/linear_solvers/src/: CMakeLists.txt  IndexHashSet.hpp  nesta.cpp  nesta.hpp  spgl1.cpp  spgl1.hpp  untested_compressed_sensing.cpp  untested_compressed_sensing.hpp
surrogates/inactive/linear_solvers/test/: CMakeLists.txt
surrogates/inactive/math_utils/src/: CMakeLists.txt  MonteCarlo.hpp  Printing.hpp  RandomNumberGenerator.hpp  RandomVariables.cpp  matlab_engine.cpp  matlab_engine.hpp  serialization.cpp  serialization.hpp  space_filling_sampling.cpp  tensor_product_basis.cpp  tensor_product_basis.hpp
surrogates/models/src/: AffineVariableTransformation.cpp  AffineVariableTransformation.hpp  AleatoryVariableTransformation.cpp  AleatoryVariableTransformation.hpp  Approximation.cpp  Approximation.hpp  BoundedVariables.cpp  BoundedVariables.hpp  CMakeLists.txt  CppFunction.cpp  CppFunction.hpp  Function.cpp  Function.hpp  Monomial.cpp  Monomial.hpp  OrthogonalPolynomialBasis.cpp  OrthogonalPolynomialBasis.hpp  PCEFactory.hpp  PolyApproximation.cpp  PolyApproximation.hpp  PolynomialApproximation.cpp  PolynomialApproximation.hpp  PolynomialChaosExpansion.cpp  PolynomialChaosExpansion.hpp  RegressionBuilder.cpp  RegressionBuilder.hpp  SurrogateBuilder.hpp  SurrogateFactory.hpp  VariableTransformation.cpp  VariableTransformation.hpp  Variables.cpp  Variables.hpp  polynomial_approximation_drivers.hpp
surrogates/models/unit/: CMakeLists.txt  directANN_approximation.cpp  gp_approximation.cpp  polynomial_approximation.cpp
surrogates/pecos_wrapper/src/: CMakeLists.txt  OrthogonalPolynomialBasis.cpp  OrthogonalPolynomialBasis.hpp  PolynomialChaosExpansion.cpp  PolynomialChaosExpansion.hpp  PolynomialChaosExpansionWrap.cpp  PolynomialChaosExpansionWrap.hpp
test/: CMakeLists.txt  HierarchicalLinearBasisTestClass.cpp  HierarchicalLinearBasisTestClass.hpp  Makefile.am  README.gsg  SConscript  TestFunctions.cpp  TestFunctions.hpp  boost_test_dist.cpp  boost_test_dist.hpp  boost_test_rng.cpp  boost_test_rng.hpp  pecos_discrete_poly.cpp  pecos_gsg_driver.cpp  pecos_hierarch_approx_driver.cpp  pecos_hierarchical_driver.cpp  pecos_ifft_g.cpp  pecos_ifft_sd.cpp  pecos_int_driver.cpp  pecos_lhs_driver.cpp  pecos_linear_solvers.cpp  pecos_pochhammer.cpp  pecos_uniform_refinable_driver.cpp  pecos_utils.cpp  run_gsg.sh  test.C  test.cpp  test_hahn.py  test_pecos_ifft_g  test_pecos_ifft_sd
util/src/: CMakeLists.txt  CrossValidatedSolver.cpp  CrossValidatedSolver.hpp  CrossValidationIterator.cpp  CrossValidationIterator.hpp  EqConstrainedLSQSolver.hpp  LARSolver.hpp  LSQCrossValidationIterator.cpp  LSQCrossValidationIterator.hpp  LSQSolver.hpp  LinearSolver.cpp  LinearSolver.hpp  LinearSystemCrossValidationIterator.cpp  LinearSystemCrossValidationIterator.hpp  LinearSystemSolver.hpp  OMPSolver.hpp  OptionsList.hpp  basis_pursuit.cpp  basis_pursuit.hpp  csopts_toreview.cpp  csopts_toreview.hpp  least_angle_regression.cpp  least_angle_regression.hpp  linear_algebra.cpp  linear_algebra.hpp  linear_solvers.cpp  linear_solvers.hpp  math_tools.cpp  math_tools.hpp  orthogonal_matching_pursuit.hpp  sparse_matrices.cpp  sparse_matrices.hpp  teuchos_data_types.hpp
util/unit/: CMakeLists.txt  linear_algebra_test.cpp  linear_solvers.cpp  linear_solvers2.cpp  linear_solvers_test.cpp  math_tools_test.cpp  options.cpp
(+28 files in other folders)
